--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,353 @@
-.App {
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
+.bgimage {
+  /* background-image: url("../public/img/jess-bailey-q10VITrVYUM-unsplash.jpg"); */
+  background-size: 100% 110%;
+  width: 100%;
+  height: 100vh;
+}
+
+.menu {
+  width: 100%;
+  height: 100px;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.leftmenu {
+  width: 20%;
+  line-height: 100px;
+  float: left;
+  /*	background-color: yellow;*/
+}
+
+.leftmenu a {
+  width: 20%;
+  line-height: 100px;
+  float: left;
+  /*	background-color: yellow;*/
+}
+
+.leftmenu h4 {
+  padding-left: 70px;
+  font-weight: bold;
+  color: white;
+  font-size: 22px;
+  font-family: "Montserrat", sans-serif;
+  line-height: 80px;
+  display: inline-block;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.rightmenu {
+  width: 50%;
+  height: 120px;
+  float: right;
+  /*	background-color: red; */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.rightmenu ul {
+  margin-left: 150px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.rightmenu ul li {
+  font-family: "Montserrat", sans-serif;
+  display: inline-block;
+  list-style: none;
+  font-size: 15px;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  line-height: 100px;
+  margin-left: 40px;
+  text-transform: uppercase;
+}
+.rightmenu ul li a {
+  font-family: "Montserrat", sans-serif;
+  display: inline-block;
+  list-style: none;
+  font-size: 15px;
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  line-height: 100px;
+  margin-left: 30px;
+  text-transform: uppercase;
+}
+
+#firstlist a {
+  color: orange;
+}
+
+.rightmenu ul li a:hover {
+  color: orange;
+}
+
+.container-content {
+  /* position: absolute; */
+  bottom: 0;
+  background: rgb(0, 0, 0); /* Fallback color */
+  background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px;
+}
+
+.text {
+  width: 100%;
+  margin-top: 185px;
+  text-transform: uppercase;
+  text-align: center;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.text h4 {
+  margin: 14px 0px;
+  font-size: 14px;
+  font-family: "Open Sans", sans-serif;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.text h1 {
+  font-size: 62px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700px;
+  margin: 14px 0px;
+}
+
+.text h3 {
+  font-size: 12px;
+  font-family: "Open Sans", sans-serif;
+}
+
+.about-h3 {
+  font-weight: 390;
+  font-style: oblique;
+}
+
+.box-padding-rl {
+  padding: 0px 12px;
+}
+
+.about-p {
+  padding: 10px 0px;
+}
+.p-bold {
+  font-weight: 900;
+}
+
+.p-blue {
+  color: blue;
+}
+
+.about-img {
+  margin: 0px auto;
+}
+.about-h3 {
+  font-weight: 400;
+  font-style: oblique;
+}
+
+.box-padding-10 {
+  padding: 10px 0px;
+}
+
+.box-padding-left {
+  padding-left: 0px;
+}
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+}
+.container-footer {
+  max-width: 1170px;
+
+  margin: auto;
+}
+.footer {
+  background-color: #4e5050;
+  padding: 70px 0;
+}
+ul {
+  list-style: none;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding-right: 0px;
+}
+.footer-col {
+  width: 25%;
+  padding: 0 15px;
+}
+.footer-col h4 {
+  font-size: 18px;
+  color: #ffffff;
+  text-transform: capitalize;
+  margin-bottom: 35px;
+  font-weight: 500;
+  position: relative;
+}
+.footer-col h4 ::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -10px;
+  background-color: #e91e63;
+  height: 2px;
+  box-sizing: border-box;
+  width: 50px;
+}
+.footer-col ul li:not(:last-child) {
+  margin-bottom: 10px;
+}
+.footer-col ul li a {
+  font-size: 16px;
+  text-transform: capitalize;
+  color: #ffffff;
+  text-decoration: none;
+  font-weight: 300;
+  color: #bbbbbb;
+  display: block;
+  transition: all 0.3s ease;
+}
+.footer-col ul li a:hover {
+  color: #ffffff;
+  padding-left: 8px;
+}
+.footer-col .social-links a {
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  background-color: rgba(255, 255, 255, 0.2);
+  margin: 0 10px 10px 0;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 50%;
+  color: #ffffff;
+  transition: all 0.5s ease;
+}
+.footer-col .social-links a:hover {
+  color: #24262b;
+  background-color: #ffffff;
+}
+@media (max-width: 767px) {
+  .footer-col {
+    width: 50%;
+    margin-bottom: 30px;
   }
-  to {
-    transform: rotate(360deg);
+}
+@media (max-width: 574px) {
+  .footer-col {
+    width: 100%;
   }
+}
+.cont {
+  display: inline-block;
+  flex-wrap: wrap;
+  padding-left: 210px;
+}
+
+.backimg {
+  /* The image used */
+  /* background-image: url("../public/img/ehud-neuhaus-F7QviaRCn3E-unsplash.jpg"); */
+
+  min-height: 600px;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+/* Add styles to the form container */
+.contain {
+  /* position: absolute; */
+  left: 426px;
+
+  margin: 20px;
+  max-width: 400px;
+  padding: 16px;
+  background-color: white;
+}
+
+/* Full-width input fields */
+input[type="text"],
+input[type="password"] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+input[type="text"]:focus,
+input[type="password"]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit button */
+.btn {
+  background-color: #4b524f;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+
+.btn:hover {
+  opacity: 1;
+}
+
+.header {
+  text-align: center;
+  padding: 32px;
+}
+
+.rows {
+  display: -ms-flexbox; /* IE 10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE 10 */
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+
+/* Create two equal columns that sits next to each other */
+.columns {
+  -ms-flex: 50%; /* IE 10 */
+  flex: 50%;
+  padding: 0 4px;
+}
+
+.columns img {
+  margin-top: 8px;
+  vertical-align: middle;
+}
+
+/* Style the buttons */
+.btn {
+  border: none;
+  outline: none;
+  padding: 10px 16px;
+  background-color: #f1f1f1;
+  cursor: pointer;
+  font-size: 18px;
+}
+
+.btn:hover {
+  background-color: #ddd;
+}
+
+.btn.active {
+  background-color: #666;
+  color: white;
+}
+
+ol,
+ul {
+  padding-left: 0;
 }
