--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,145 +1,138 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-.contact{
-    position: relative;
-    min-height: 100vh;
-    padding: 50px 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background: url(jess-bailey-q10VITrVYUM-unsplash.jpg);
-    background-size: cover;
+.contact {
+  position: relative;
+  min-height: 100vh;
+  padding: 50px 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  /* background: url(jess-bailey-q10VITrVYUM-unsplash.jpg); */
+  background-size: cover;
 }
 /* Position text in the middle of the page/image */
 
-.contact .content{
-    max-width: 800px;
-    text-align: center;
+.contact .content {
+  max-width: 800px;
+  text-align: center;
 }
-.contact  .content h2{
+.contact .content h2 {
   font-size: 36px;
   font-weight: 500;
   color: rgb(248, 130, 109);
 }
-.contact .content p{
-    font-weight: 300;
-    color: rgb(243, 161, 113);
+.contact .content p {
+  font-weight: 300;
+  color: rgb(243, 161, 113);
 }
-.container{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 30px;
+.container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* margin-top: 30px; */
 }
-.container .contactinfo{
-    width: 50%;
-    display: flex;
-    flex-direction: column;
+.container .contactinfo {
+  display: flex;
+  flex-direction: column;
 }
-.container .contactinfo .box{
-    position: relative;
-    padding: 20px 0;
-    display: flex;
+.container .contactinfo .box {
+  position: relative;
+  padding: 20px 0;
+  display: flex;
 }
-.container .contactinfo .box .icon{
-    min-width: 60px;
-    height: 60px;
-    background: rgb(240, 108, 67);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    font-size: 22px;
-
+.container .contactinfo .box .icon {
+  min-width: 60px;
+  height: 60px;
+  background: rgb(240, 108, 67);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 22px;
 }
-.container .contactinfo .box .text{
-    display: flex;
-    margin-left: 20px;
-    font-size: 16px;
-    color: rgb(235, 149, 100);
-    flex-direction: column;
-    flex-direction: column;
-    font-weight: 300;
+.container .contactinfo .box .text {
+  display: flex;
+  margin-left: 20px;
+  font-size: 16px;
+  color: rgb(235, 149, 100);
+  flex-direction: column;
+  flex-direction: column;
+  font-weight: 300;
 }
-.container .contactinfo .box .text h2{
-   font-weight: 500;
-   color: #00bcd4;
-
+.container .contactinfo .box .text h2 {
+  font-weight: 500;
+  color: #00bcd4;
 }
-.contactForm{
-    width: 40%;
-    padding: 40px;
-    background: #fff;
+.contactForm {
+  /* width: 40%; */
+  padding: 20px;
+  background: #fff;
 }
-.contactForm h2{
-    font-size: 30px;
-    color: #333;
-    font-weight: 500;
+.contactForm h2 {
+  font-size: 30px;
+  color: #333;
+  font-weight: 500;
 }
-.contactForm .inputbox{
-    position: relative;
-    width: 100%;
-    margin-top:  10px;
+.contactForm .inputbox {
+  position: relative;
+  width: 100%;
+  margin-top: 10px;
 }
 .contactForm .inputbox input,
-.contactForm .inputbox textarea
-{
+.contactForm .inputbox textarea {
+  width: 100%;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  border: none;
+  border-bottom: 2px solid #333;
+  outline: none;
+  resize: none;
+}
+.contactForm .inputbox span {
+  position: absolute;
+  left: 0;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  pointer-events: none;
+  transition: 0.5s;
+  color: #666;
+}
+.contactForm .inputbox input:focus ~ span,
+.contactForm .inputbox input:valid ~ span,
+.contactForm .inputbox textarea:focus ~ span,
+.contactForm .inputbox textarea:valid ~ span {
+  color: #fc8d4d;
+  font-size: 12px;
+  transform: translateY(-20px);
+}
+.contactForm .inputbox input[type="submit"] {
+  width: 100px;
+  background: #f5b66f;
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 18px;
+}
+@media (max-width: 991px) {
+  .contact {
+    padding: 50px;
+  }
+  .container {
+    flex-direction: column;
+  }
+  .container .contactinfo {
     width: 100%;
-    padding: 5px 0;
-    font-size: 16px;
-    margin: 10px 0;
-    border: none;
-    border-bottom: 2px solid #333;
-    outline: none;
-    resize: none;
-}
-.contactForm .inputbox  span{
-   position: absolute;
-   left: 0;
-   padding: 5px 0;
-   font-size: 16px;
-   margin: 10px 0;
-   pointer-events: none;
-   transition: 0.5s;
-   color: #666;
-
-}
-.contactForm .inputbox input:focus ~span,
-.contactForm .inputbox input:valid ~span,
-.contactForm .inputbox textarea:focus ~span,
-.contactForm .inputbox textarea:valid ~span
-{
-    color:#fc8d4d;
-    font-size:12px;
-    transform:translateY(-20px);
-
-}
-.contactForm .inputbox input[type="submit"]{
-    width: 100px;
-    background: #f5b66f;
-    color:#fff;
-    border:none;
-    cursor: pointer;
-    padding: 10px;
-    font-size: 18px;
-}
-@media(max-width:991px){
-    .contact{
-        padding: 50px;
-    }
-    .container{
-        flex-direction: column;
-    }
-    .container .contactinfo{
-        width: 100%;
-    }
-    .container .contactinfo{
-       margin-bottom: 100%;
-    }
+  }
+  .container .contactinfo {
+    /* margin-bottom: 100%; */
+  }
 }
