--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,7 @@ ul {
 .circle{
   width: 600px;
   height: 600px;
-  background: rgba(0,0,0,0.2);
+  background: rgba(230, 194, 194, 0.2);
   border-radius: 50%;
   position: absolute;
   top: 20%;
