--- a/src/components/style.css
+++ b/src/components/style.css
@@ -23,11 +23,11 @@
 .contact .content h2 {
   font-size: 36px;
   font-weight: 500;
-  color: rgb(248, 130, 109);
+  color: rgb(121, 115, 115);
 }
 .contact .content p {
   font-weight: 300;
-  color: rgb(243, 161, 113);
+  color: rgb(121, 115, 112);
 }
 .container {
   width: 100%;
@@ -48,7 +48,7 @@
 .container .contactinfo .box .icon {
   min-width: 60px;
   height: 60px;
-  background: rgb(240, 108, 67);
+  background: rgb(90, 86, 85);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -59,14 +59,14 @@
   display: flex;
   margin-left: 20px;
   font-size: 16px;
-  color: rgb(235, 149, 100);
+  color: rgb(128, 113, 105);
   flex-direction: column;
   flex-direction: column;
   font-weight: 300;
 }
 .container .contactinfo .box .text h2 {
   font-weight: 500;
-  color: #00bcd4;
+  color: #595b5c;
 }
 .contactForm {
   /* width: 40%; */
@@ -75,7 +75,7 @@
 }
 .contactForm h2 {
   font-size: 30px;
-  color: rgb(236, 175, 134);
+  color: rgb(100, 98, 96);
   font-weight: 500;
 }
 .contactForm .inputbox {
@@ -90,7 +90,7 @@
   font-size: 16px;
   margin: 10px 0;
   border: none;
-  border-bottom: 2px solid rgb(231, 129, 82);
+  border-bottom: 2px solid rgb(92, 89, 88);
   outline: none;
   resize: none;
   background-color: white;
@@ -103,19 +103,19 @@
   margin: 10px 0;
   pointer-events: none;
   transition: 0.5s;
-  color: rgb(241, 145, 115);
+  color: rgb(80, 76, 74);
 }
 .contactForm .inputbox input:focus ~ span,
 .contactForm .inputbox input:valid ~ span,
 .contactForm .inputbox textarea:focus ~ span,
 .contactForm .inputbox textarea:valid ~ span {
-  color: #fc8d4d;
+  color: #615f5d;
   font-size: 12px;
   transform: translateY(-20px);
 }
 .contactForm .inputbox input[type="submit"] {
   width: 100px;
-  background: #f5b66f;
+  background: #5c5b5b;
   color: #fff;
   border: none;
   cursor: pointer;
