--- a/src/components/style.css
+++ b/src/components/style.css
@@ -3,17 +3,17 @@
   padding: 0;
   box-sizing: border-box;
 }
-.contact {
-  position: relative;
-  min-height: 100vh;
-  padding: 50px 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+/* .contact {
+  /* position: relative;
+  min-height: 100vh; */
+  /* padding: 50px 100px;
+  display: flex; */
+  /* justify-content: center; */
+  /* align-items: center;
+  flex-direction: column; */
   /* background: url(jess-bailey-q10VITrVYUM-unsplash.jpg); */
-  background-size: cover;
-}
+  /* background-size: cover;
+} */ 
 /* Position text in the middle of the page/image */
 
 .contact .content {
