--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
 }
 .footer {
   /* margin-top: 1080px; */
-  background-color: #4e5050;
+  background-color: #3c3d41;
   padding: 70px 0;
 }
 ul {
