--- a/src/components/pic.css
+++ b/src/components/pic.css
@@ -52,3 +52,17 @@
   letter-spacing: 5px;
   color: #949494;
 }
+/* ************index********** */
+.parallax {
+      /* The image used */
+      background-image: url("img/23.jpg");
+  
+      /* Set a specific height */
+      min-height: 2000px;
+  
+      /* Create the parallax scrolling effect */
+      background-attachment:fixed;
+      background-position:bottom;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
