--- a/src/components/pic.css
+++ b/src/components/pic.css
@@ -54,15 +54,15 @@
 }
 /* ************index********** */
 .parallax {
-      /* The image used */
-      background-image: url("img/23.jpg");
-  
-      /* Set a specific height */
-      min-height: 2000px;
-  
-      /* Create the parallax scrolling effect */
-      background-attachment:fixed;
-      background-position:bottom;
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
+  /* The image used */
+  /* background-image: url("img/23.jpg"); */
+
+  /* Set a specific height */
+  /* min-height: 2000px; */
+
+  /* Create the parallax scrolling effect */
+  /* background-attachment: fixed;
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover; */
+}
