--- a/src/components/pic.css
+++ b/src/components/pic.css
@@ -53,7 +53,7 @@
   color: #949494;
 }
 /* ************index********** */
-.parallax {
+/* .parallax {
       /* The image used */
       background-image: url("img/23.jpg");
   
@@ -65,4 +65,4 @@
       background-position:bottom;
       background-repeat: no-repeat;
       background-size: cover;
-    }
+    } */
