--- a/src/App.css
+++ b/src/App.css
@@ -244,7 +244,7 @@ ul {
   max-width: 820px;
   width: 100%;
   padding: 40px 20px;
-  background-color: rgba(207, 181, 148, 0.6);
+  background-color: rgb(0 0 0 / 30%);
 }
 
 .navbar-brand img {
