--- a/src/App.css
+++ b/src/App.css
@@ -189,7 +189,7 @@ ul {
   } */
 
 /* ......homepage.... */
-.circle {
+ /* .circle {
   width: 600px;
   height: 600px;
   background: rgba(230, 194, 194, 0.2);
@@ -198,8 +198,8 @@ ul {
   top: 20%;
   right: 10%;
   z-index: -1;
-}
-.landing {
+} */
+/* .landing {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -215,11 +215,11 @@ ul {
 }
 .righty img {
   width: 90%;
-}
+} */
 
 .parallax {
-  /* background-image: url(""); */
-  min-height: 500px;
+  background-image: url("");
+   min-height: 500px;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -249,4 +249,32 @@ ul {
 
 .navbar-brand img {
   max-width: 150px;
+} 
+
+.index {
+  background-image: url("");
+   min-height: 500px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+.index-bar {
+  font-size: 20px;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  padding: 20px;
+  min-width: 60%;
+  background-color: #95d5e95c;
+}
+.index-bar {
+  max-width: 820px;
+  width: 100%;
+  padding: 80px 60px;
+  background-color: rgb(0 0 0 / 20%);
 }
