--- a/src/App.css
+++ b/src/App.css
@@ -254,7 +254,7 @@ ul {
 .index {
   background-image: url("");
    min-height: 500px;
-  background-attachment: fixed;
+  background-attachment: absolute;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -263,18 +263,21 @@ ul {
 .index-bar {
   font-size: 20px;
   color: white;
-  position: absolute;
+  position:absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
-  padding: 20px;
-  min-width: 60%;
-  background-color: #95d5e95c;
+  padding: 50px;
+  max-width: 100%;
+  background-color: #22f1c55c;
 }
 .index-bar {
   max-width: 820px;
   width: 100%;
   padding: 80px 60px;
-  background-color: rgb(0 0 0 / 20%);
+  background-color: rgb(rgb(57, 115, 163) / 30%);
+  min-height: 500px;
+  max-width: 100%;
+ 
 }
