--- a/src/App.css
+++ b/src/App.css
@@ -262,22 +262,28 @@ ul {
 }
 .index-bar {
   font-size: 20px;
-  color: white;
+  /* color: white; */
   position:absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  text-align: center;
   padding: 50px;
   max-width: 100%;
-  background-color: #22f1c55c;
+  
 }
 .index-bar {
   max-width: 820px;
   width: 100%;
   padding: 80px 60px;
-  background-color: rgb(rgb(57, 115, 163) / 30%);
+  background-color:rgb(90, 158, 160,40%);
   min-height: 500px;
   max-width: 100%;
  
+}
+.text{
+  margin-top: 185px;
+  margin-left: 225px;
+  color:rgb(17, 17, 17);
+  font-weight: 700;
+  
 }
