--- a/src/App.css
+++ b/src/App.css
@@ -228,7 +228,7 @@ ul {
 }
 
 .parallax-text {
-  font-size: 100px;
+  font-size: 60px;
   color: white;
   position: absolute;
   top: 50%;
@@ -280,10 +280,9 @@ ul {
   max-width: 100%;
  
 }
-.text{
+.texts{
   margin-top: 185px;
-  margin-left: 225px;
-  color:rgb(17, 17, 17);
-  font-weight: 700;
-  
+  color: #050004;
+  font-weight: 900;
+  text-align: center;
 }
