--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,318 @@
-/* footer */
+
+
+/**************navbar**************************/
+
+.navbar-nav {
+  margin-left: auto;
+
+}
+.navbar-brand img {
+  max-width: 150px;
+} 
+.navbar-nav .nav-item{
+  float: right;
+  padding-left: 26px;
+ 
+  
+}
+/* ***********navbar ends here****************** */
+
+
+/*********************index page********************* */
+.parallax {
+  background-image: url("");
+   min-height: 500px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.parallax-text {
+  font-size: 60px;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  padding: 20px;
+  min-width: 60%;
+  background-color: #f5deb35c;
+}
+
+.parallax-text {
+  max-width: 820px;
+  width: 100%;
+  padding: 40px 20px;
+  background-color: rgb(0 0 0 / 30%);
+}
+
+.index {
+  background-image: url("");
+   min-height: 200px;
+  background-attachment: absolute;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+.index-bar {
+  font-size: 20px;
+  position:absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 50px;
+  max-width: 100%;
+  
+}
+.index-bar {
+  max-width: 820px;
+  width: 100%;
+  padding: 80px 60px;
+  background-color:rgb(90, 158, 160,10%);
+  min-height: 500px;
+  max-width: 100%;
+ 
+}
+.texts{
+  margin-top: 185px;
+  color: #050004;
+  font-weight: 900;
+  text-align: center;
+}
+
+/* .prooduct-bar {
+  font-size: 60px;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  padding: 20px;
+  min-width: 60%;
+  background-color: #f5deb35c;
+}
+.product-bar {
+  max-width: 820px;
+  width: 100%;
+  padding: 40px 20px;
+  background-color: rgb(0 0 0 / 30%);
+ 
+}
+.texting{
+  margin-top: 185px;
+  color: #050004;
+  font-weight: 900;
+  text-align: center;
+} */
+
+/* *****************index page ends here************* */
+
+
+/* *******************collection page******************* */
+/* .gallery {
+  border: 1px solid #ccc;
+  position: relative;
+}
+.gallery img {
+  width: 100%;
+  height: auto;
+}
+.responsive {
+  padding: 0 6px;
+ 
+}
+
+@media only screen and(max-width:700px) {
+  .responsive {
+    width: 50%;
+    margin: 6px 0;
+  }
+}
+@media only screen and(max-width:500px) {
+  .responsive {
+    width: 100%;
+  }
+} */
+
+.colllection-section {
+}
+
+.collection-section img {
+  width: 100%;
+  border-radius: 5px;
+}
+
+.collection-section div {
+  box-sizing: border-box;
+  padding: 10px;
+  position: relative;
+}
+
+.card-img-top{
+    height: 400px;
+    margin: 0px auto;
+    transition: 0.7s ease-out;
+    /* transition: transform .2s; */
+}
+
+.card-img-top:hover{
+    height: 570px;
+    animation: cubic-bezier(0.55, 0.085, 0.68, 0.53);
+    -webkit-animation: cubic-bezier(0.55, 0.085, 0.68, 0.53);
+}
+/* *****************collection page ends here*********** */
+
+/* *******************about page******************** */
+.primary-heading {
+  font-size: 40px;
+  font-weight: 700;
+  color: #4487b1;
+}
+
+.secondary-heading {
+  margin-bottom: 0px;
+  letter-spacing: 5px;
+  color: #949494;
+}
+.coloum_style{
+  max-width: 100px;
+
+}
+ /* *********************about page ends here************** */
+
+/* **************contact page here**************** */
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.contact .content {
+  max-width: 800px;
+  text-align: center;
+}
+.contact .content h2 {
+  font-size: 36px;
+  font-weight: 500;
+  color: rgb(76, 145, 185);
+}
+.contact .content p {
+  font-weight: 300;
+  color: rgb(72, 81, 90);
+}
+/* .container {
+  width: 100%;
+} */
+.container .contactinfo {
+  display: flex;
+  flex-direction: column;
+
+}
+.container .contactinfo .box {
+  position: relative;
+  padding: 0px 0 40px;
+  display: flex;
+  align-items: center;
+}
+.container .contactinfo .box .icon {
+  min-width: 45px;
+  height: 45px;
+  background: rgb(76, 145, 185);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 22px;
+}
+.container .contactinfo .box .text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1rem;
+}
+.container .contactinfo .box .text p {
+  margin-bottom: 0px;
+}
+.container .contactinfo .box .text h2 {
+  font-weight: 500;
+  color: rgb(76, 145, 185);
+  margin-bottom: 0px;
+}
+.contactForm {
+  padding: 20px;
+  background: #fff;
+}
+h2 {
+  font-size: 24px;
+  color: rgb(76, 145, 185);
+  font-weight: 500;
+}
+.contactForm .inputbox {
+  position: relative;
+  width: 100%;
+  margin-top: 10px;
+}
+.contactForm .inputbox input,
+.contactForm .inputbox textarea {
+  width: 100%;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 20px 0;
+  border: none;
+  border-bottom: 2px solid rgb(92, 89, 88);
+  outline: none;
+  resize: none;
+  background-color: white;
+}
+.contactForm .inputbox span {
+  position: absolute;
+  left: 0;
+  padding: 5px 0;
+  font-size: 16px;
+  margin: 10px 0;
+  pointer-events: none;
+  transition: 0.5s;
+  color: rgb(76, 145, 185);
+}
+.contactForm .inputbox input:focus ~ span,
+.contactForm .inputbox input:valid ~ span,
+.contactForm .inputbox textarea:focus ~ span,
+.contactForm .inputbox textarea:valid ~ span {
+  color: #615f5d;
+  font-size: 12px;
+  transform: translateY(-20px);
+}
+.contactForm .inputbox input[type="submit"] {
+  width: 100px;
+  background: rgb(76, 145, 185);
+  color: #fff;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 18px;
+}
+@media (max-width: 991px) {
+  .contact {
+  }
+  .container {
+  }
+  .container .contactinfo {
+    width: 100%;
+
+  }
+  .container .contactinfo {
+  }
+  
+}
+/* ***************contact page ends here*********** */
+
+/* ******************footer starts here************ */
 * {
   margin: 0;
   padding: 0;
@@ -12,18 +326,12 @@
   margin: auto;
 }
 .footer {
-  /* margin-top: 1080px; */
   background-color: #3c3d41;
   padding: 70px 0;
 }
 ul {
   list-style: none;
 }
-/* .row {
-  display: flex;
-  flex-wrap: wrap;
-  padding-right: 0px;
-} */
 .footer-col {
   width: 25%;
   padding: 0 15px;
@@ -36,7 +344,6 @@ ul {
   font-weight: 500;
   position: relative;
   padding-left: 28px;
-  /* padding-top: 200px; */
 }
 .footer-col h4 ::before {
   content: "";
@@ -93,196 +400,11 @@ ul {
     width: 100%;
   }
 }
-
-/* Prashant here */
-
-.navbar-nav {
-  margin-left: auto;
+.footer-col map{
+width:"900px" ;
+height:"650px";
+border:0;
+/* allowfullscreen:"" ;
+ loading:"lazy"; */
 }
-/* .nav-container{
-  background-color: #555657;
-  display:flow-root;
-  padding: 0 10%;
-}
-.navbar-brand{
-  display: table;
-  float: left;
-  vertical-align: middle;
-  padding: 0%;
-  color:white;
- 
-  width: 180px;
-  height: 68px;
-  position: relative;
-  z-index: 9;
-  transition:all 0.5s;
- 
-}
-.navbar-brand:before{
-    content: "";
-    position: absolute;
-    bottom: 0;
-    height: 100%;
-    z-index: -1;
-    right: -50px;
-    width: 50%;
-    transform:skew(30deg);
-    background-color: #3c3d41;
-}
-.navbar-brand:after{
-  content: "";
-  position: absolute;
-  bottom: 0;
-  height: 100%;
-  z-index: -1;
-  right: 10%;
-  width: 2000px;
-  background-color: #3c3d41;
-}
-.navbar-brand a{
-  color: #bbbbbb;
-  font-size: 33px;
-  font-weight: 600;
-  line-height: 70px;
-  text-decoration: none;
-}
-.navbar-nav ul li{
-  display: inline-block;
-  line-height: 70px;
-  border-radius: 14px;
-  
-}
-.navbar-nav li.active a{
-  color: #ffffff;
-  background-color: #3d4e7e;
-  border-radius:14px ;
-  
-}
-.navbar-nav li a{
- padding: 15px 87px;
- border: 0;
- margin-bottom: 0px;
- font-size: 16px;
- font-weight: 500;
- color: #bbbbbb;
- opacity: 1;
- text-decoration: none;
- transition: all 0.5s;
- border-radius: 11px;
-
-}
-.navbar-nav li:hover a{
-  color: #68aee7;
-  background-color: #f0f2f7;
-  border-radius: 11px;
-  -webkit-border-radius: 11px;
-  -moz-border-radius: 11px;
-  -ms-border-radius: 11px;
-  -o-border-radius: 11px;
-}
-@media(max-width:1250px){
-  /* .nav-container{
-    padding: 0 2%;
-  }
-  .navbar-nav li a{
-    padding: 15px 20;
-  } */
-
-/* ......homepage.... */
- /* .circle {
-  width: 600px;
-  height: 600px;
-  background: rgba(230, 194, 194, 0.2);
-  border-radius: 50%;
-  position: absolute;
-  top: 20%;
-  right: 10%;
-  z-index: -1;
-} */
-/* .landing {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
-.lefty {
-  flex-basis: 40%;
-  max-width: 450px;
-}
-.righty {
-  flex-basis: 10%;
-  text-align: right;
-}
-.righty img {
-  width: 90%;
-} */
-
-.parallax {
-  background-image: url("");
-   min-height: 500px;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-
-.parallax-text {
-  font-size: 60px;
-  color: white;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  padding: 20px;
-  min-width: 60%;
-  background-color: #f5deb35c;
-}
-
-.parallax-text {
-  max-width: 820px;
-  width: 100%;
-  padding: 40px 20px;
-  background-color: rgb(0 0 0 / 30%);
-}
-
-.navbar-brand img {
-  max-width: 150px;
-} 
-
-.index {
-  background-image: url("");
-   min-height: 500px;
-  background-attachment: absolute;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-.index-bar {
-  font-size: 20px;
-  /* color: white; */
-  position:absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 50px;
-  max-width: 100%;
-  
-}
-.index-bar {
-  max-width: 820px;
-  width: 100%;
-  padding: 80px 60px;
-  background-color:rgb(90, 158, 160,40%);
-  min-height: 500px;
-  max-width: 100%;
- 
-}
-.texts{
-  margin-top: 185px;
-  color: #050004;
-  font-weight: 900;
-  text-align: center;
-}
+/* ******************footer ends here************ */
