--- a/src/App.css
+++ b/src/App.css
@@ -49,42 +49,9 @@
   background-color: rgb(0 0 0 / 30%);
 }
 
-.index {
-  background-image: url("");
-   min-height: 200px;
-  background-attachment: absolute;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-.index-bar {
+.product-text-w{
   font-size: 20px;
-  position:absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 50px;
-  max-width: 100%;
-  
-}
-.index-bar {
-  max-width: 820px;
-  width: 100%;
-  padding: 80px 60px;
-  background-color:rgb(90, 158, 160,10%);
-  min-height: 500px;
-  max-width: 100%;
- 
-}
-.texts{
-  margin-top: 185px;
-  color: #050004;
-  font-weight: 900;
-  text-align: center;
-}
-/* .prooduct-bar {
-  font-size: 60px;
+  font-weight: bold;
   color: white;
   position: absolute;
   top: 50%;
@@ -92,22 +59,53 @@
   transform: translate(-50%, -50%);
   text-align: center;
   padding: 20px;
-  min-width: 60%;
-  background-color: #f5deb35c;
+  min-width: 80%;
+  background-color: #70592ea9;
 }
-.product-bar {
-  max-width: 820px;
-  width: 100%;
-  padding: 40px 20px;
-  background-color: rgb(0 0 0 / 30%);
- 
+.product-text-w{
+  
+  padding: 40px 40px;
+  /* background-color: rgb(0 0 0 / 60%); */
 }
-.texting{
-  margin-top: 185px;
-  color: #050004;
-  font-weight: 900;
+.product-text-c{
+  font-size: 20px;
+  font-weight:bold;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   text-align: center;
-} */
+  padding: 20px;
+  min-width: 80%;
+  background-color: #9233268f;
+}
+.product-text-c{
+  
+  
+  padding: 40px 40px;
+  /* background-color: rgb(0 0 0 / 60%); */
+}
+.product-text-cp{
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  padding: 20px;
+  min-width: 80%;
+  background-color: #e7ab3c62;
+}
+.product-text-cp{
+  
+  
+  padding: 40px 40px;
+  /* background-color: rgb(0 0 0 / 60%); */
+}
+
 
 /* *****************index page ends here************* */
 
@@ -152,18 +150,18 @@
   position: relative;
 }
 
-.card-img-top{
+/* .card-img-top{
     height: 400px;
     margin: 0px auto;
     transition: 0.7s ease-out;
     /* transition: transform .2s; */
-}
 
-.card-img-top:hover{
+
+/* .card-img-top:hover{
     height: 570px;
     animation: cubic-bezier(0.55, 0.085, 0.68, 0.53);
     -webkit-animation: cubic-bezier(0.55, 0.085, 0.68, 0.53);
-}
+} */
 /* *****************collection page ends here*********** */
 
 /* *******************about page******************** */
@@ -182,6 +180,10 @@
   max-width: 100px;
 
 }
+.text-muted{
+  font-size: large;
+}
+
  /* *********************about page ends here************** */
 
 /* **************contact page here**************** */
