--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,21 @@
-
-
 /**************navbar**************************/
 
 .navbar-nav {
   margin-left: auto;
-
 }
 .navbar-brand img {
   max-width: 150px;
-} 
-.navbar-nav .nav-item{
+}
+.navbar-nav .nav-item {
   float: right;
   padding-left: 26px;
- 
-  
 }
 /* ***********navbar ends here****************** */
-
 
 /*********************index page********************* */
 .parallax {
   background-image: url("");
-   min-height: 500px;
+  min-height: 500px;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -49,63 +43,57 @@
   background-color: rgb(0 0 0 / 30%);
 }
 
-.product-text-w{
+.product-text-w {
   font-size: 20px;
   font-weight: bold;
   color: white;
-  position: absolute;
+  /* position: absolute; */
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  /* transform: translate(-50%, -50%); */
   text-align: center;
   padding: 20px;
   min-width: 80%;
   background-color: #70592ea9;
 }
-.product-text-w{
-  
+.product-text-w {
   padding: 40px 40px;
- 
 }
-.product-text-c{
-  font-size: 20px;
-  font-weight:bold;
-  color: white;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  padding: 20px;
-  min-width: 80%;
-  background-color: #9233268f;
-}
-.product-text-c{
- padding: 40px 40px;
-}
-.product-text-cp{
+.product-text-c {
   font-size: 20px;
   font-weight: bold;
   color: white;
-  position: absolute;
+  /* position: absolute; */
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  /* transform: translate(-50%, -50%); */
   text-align: center;
   padding: 20px;
   min-width: 80%;
-  background-color: #e7ab3c62;
+  background-color: #3d07008f;
 }
-.product-text-cp{
-  
-  
+.product-text-c {
+  padding: 40px 40px;
+}
+.product-text-cp {
+  font-size: 20px;
+  font-weight: bold;
+  color: white;
+  /* position: absolute; */
+  top: 50%;
+  left: 50%;
+  /* transform: translate(-50%, -50%); */
+  text-align: center;
+  padding: 20px;
+  min-width: 80%;
+  background-color: #3f290062;
+}
+.product-text-cp {
   padding: 40px 40px;
   /* background-color: rgb(0 0 0 / 60%); */
 }
 
-
 /* *****************index page ends here************* */
-
 
 /* *******************collection page******************* */
 .gallery {
@@ -118,7 +106,6 @@
 }
 .responsive {
   padding: 0 6px;
- 
 }
 
 @media only screen and(max-width:700px) {
@@ -147,7 +134,6 @@
   position: relative;
 }
 
-
 /* *****************collection page ends here*********** */
 
 /* *******************about page******************** */
@@ -162,18 +148,16 @@
   letter-spacing: 5px;
   color: #949494;
 }
-.coloum_style{
+.coloum_style {
   max-width: 100px;
-
 }
-.text-muted{
+.text-muted {
   font-size: large;
 }
 
- /* *********************about page ends here************** */
+/* *********************about page ends here************** */
 
 /* **************contact page here**************** */
-
 
 * {
   margin: 0;
@@ -197,7 +181,6 @@
 .container .contactinfo {
   display: flex;
   flex-direction: column;
-
 }
 .container .contactinfo .box {
   position: relative;
@@ -289,11 +272,9 @@ h2 {
   }
   .container .contactinfo {
     width: 100%;
-
   }
   .container .contactinfo {
   }
-  
 }
 /* ***************contact page ends here*********** */
 
@@ -385,9 +366,9 @@ ul {
     width: 100%;
   }
 }
-.footer-col map{
-width:"900px" ;
-height:"650px";
-border:0;
+.footer-col map {
+  width: "900px";
+  height: "650px";
+  border: 0;
 }
 /* ******************footer ends here************ */
